# smart-buoy

./: .gitignore  Cargo.toml  LICENSE  README.md
fx30/etc/: iptables.rules
fx30/home/root/: boot.sh  data.sh  gps.sh
fx30/home/root/sms_scripts/: ulpm.sh  upgrade.sh
legato/TaringaBoot/: .cproject  .project  TaringaBoot.adef
legato/TaringaBoot/TaringaComponent/: Component.cdef  TaringaComponent.c
legato/TaringaSMSController/: .cproject  .project  TaringaSMSController.adef
legato/TaringaSMSController/smsController/: Component.cdef  main.c  smsMO.c  smsMT.c
scripts/: build-fx30.sh  build-server.sh  deploy-fx30.sh  deploy-server.sh
src/: commands.rs  errors.rs  lib.rs
