[package]
name = "buoy_code"
version = "0.5.32"
authors = ["Simon M. Werner <simonwerner@gmail.com>"]
readme = "README.md"
license = "GPLv3"
edition = "2018"

[features]
default = []

# Enabled if we are compiling for the FX30
fx30 = []


[profile.dev]
debug = true
rpath = false
lto = false

[profile.release]
opt-level = "s"
debug = false
rpath = false
lto = true

[dependencies]
chrono = "0.4.6"
failure = "0.1.3"
futures = "0.1.25"
httparse = "1.3.3"
lazy_static = "1.2.0"
log = "0.4.6"
env_logger = "0.6.1"
quinn = "0.4.0"
quinn-proto = "0.4.0"
regex = "1.1.0"
ring = "0.16.9"
rustls = { version = "0.16", features = ["quic"] }
serialport = "3.2.0"
sonogram = "0.4.3"
time = "0.1"
tokio = "0.1.6"
tokio-current-thread = "0.1.4"
tokio-reactor = "0.1.1"
tokio-io = "0.1"
tokio-timer = "0.2.1"
uptime_lib = "0.1.0"
url = "1.7.2"
x3 = { version = "0.2.1", features = ["oceaninstruments"] }

